working on new benchmarks for R&R- staring script to do NDT, P2P-ICP, and LOAM in MatLab

--- a/v3/perspective_shift/D2DvsDNN.ipynb
+++ b/v3/perspective_shift/D2DvsDNN.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bacterial-nerve",
    "metadata": {},
    "outputs": [
@@ -27,7 +27,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.7.0\n"
+      "2.9.1\n"
      ]
     },
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "utility-burst",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "significant-device",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "protective-flush",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "quiet-philip",
    "metadata": {},
    "outputs": [
@@ -239,15 +239,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "184\n",
+      "47\n",
+      "1/1 [==============================] - 0s 14ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 13ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 17ms/step\n",
+      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 11ms/step\n",
       "\n",
-      " correct soln [-1.4823195   1.7298952   0.02789314]\n",
+      " correct soln [ 0.52963376 -1.5925289  -0.11975689]\n",
       "\n",
-      " estiamted soln: [[-1.6927743   1.67902659 -0.32185467]]\n",
+      " estiamted soln: [[ 0.51067625 -1.73462761 -0.16316545]]\n",
       "\n",
-      " error from DNN: [[0.21045483 0.05086865 0.34974781]]\n",
+      " error from DNN: [[0.01895751 0.14209867 0.04340855]]\n",
       "\n",
-      " error in means [-0.01429355 -0.00636709 -0.00638966]\n"
+      " error in means [0.00147319 0.00860536 0.02639726]\n"
      ]
     }
    ],
@@ -280,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "active-liverpool",
    "metadata": {},
    "outputs": [
@@ -288,20 +298,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([-1.4145201  -0.04725241  0.12405372], shape=(3,), dtype=float32)\n",
-      "[ 4.6472373  -4.8606296  -0.24017562]\n",
-      "[ 5.0642323  -4.424487   -0.24017562]\n"
+      "tf.Tensor([ 0.53243005  0.00128222 -0.05259839], shape=(3,), dtype=float32)\n",
+      "[ 4.709242   -3.4214644   0.20789552]\n",
+      "[ 4.9969807  -2.9855585   0.20789552]\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74ea7cca38bc4ceb8fac57e12ff7e631",
+       "model_id": "f25d3237d06a432bba2e67448dbbe98d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ViewInteractiveWidget(height=749, layout=Layout(height='auto', width='100%'), width=960)"
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
       ]
      },
      "metadata": {},
@@ -384,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "proud-puzzle",
    "metadata": {},
    "outputs": [
@@ -393,6 +403,16 @@
      "output_type": "stream",
      "text": [
       "x_test tf.Tensor([1472  100    3], shape=(3,), dtype=int32)\n",
+      "46/46 [==============================] - 0s 2ms/step\n",
+      "46/46 [==============================] - 0s 2ms/step\n",
+      "46/46 [==============================] - 0s 2ms/step\n",
+      "46/46 [==============================] - 0s 2ms/step\n",
+      "46/46 [==============================] - 0s 2ms/step\n",
+      "46/46 [==============================] - 0s 2ms/step\n",
+      "46/46 [==============================] - 0s 2ms/step\n",
+      "46/46 [==============================] - 0s 2ms/step\n",
+      "46/46 [==============================] - 0s 2ms/step\n",
+      "46/46 [==============================] - 0s 2ms/step\n",
       "\n",
       " correct soln \n",
       " [[-1.5052794  -0.061748   -0.02118067]\n",
@@ -404,25 +424,25 @@
       " [-0.7231753   0.3887675  -0.00653277]]\n",
       "\n",
       " estiamted soln: \n",
-      " [[-1.53435132 -0.10067482 -0.0263386 ]\n",
-      " [-0.73839783 -0.5543911   0.03800964]\n",
-      " [ 0.20079211  0.43016075 -0.06339325]\n",
+      " [[-1.58495105 -0.07757852 -0.01402593]\n",
+      " [-0.80877191 -0.59026881  0.02493609]\n",
+      " [ 0.13410813  0.41948672 -0.06199452]\n",
       " ...\n",
-      " [ 0.04568869  1.43598578 -0.09281087]\n",
-      " [-1.86203559 -1.86440459 -0.02506529]\n",
-      " [-0.76765411  0.49660356 -0.04128042]]\n",
+      " [ 0.08477809  1.34650388 -0.0826522 ]\n",
+      " [-1.8182852  -1.85418773 -0.02040547]\n",
+      " [-0.72365818  0.34285385 -0.32680475]]\n",
       "\n",
       " error from DNN: \n",
-      " [[ 0.0290719   0.03892682  0.00515793]\n",
-      " [ 0.01160388  0.00475867  0.02100839]\n",
-      " [ 0.09502148  0.01670284  0.01610028]\n",
+      " [[ 0.07967163  0.01583052 -0.00715474]\n",
+      " [ 0.08197797  0.04063638  0.03408195]\n",
+      " [ 0.16170546  0.02737688  0.01470155]\n",
       " ...\n",
-      " [-0.03250576 -0.05495605  0.04537543]\n",
-      " [ 0.04980786 -0.00496874 -0.01791201]\n",
-      " [ 0.04447882 -0.10783605  0.03474765]]\n",
+      " [-0.07159516  0.03452585  0.03521677]\n",
+      " [ 0.00605747 -0.01518559 -0.02257183]\n",
+      " [ 0.00048289  0.04591366  0.32027198]]\n",
       "\n",
       " mean raw DNN error: \n",
-      " 0.050120725143903255\n",
+      " 0.12247131528202262\n",
       "\n",
       " mean raw D2D error \n",
       " 0.051821\n"
@@ -467,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "understanding-gibson",
    "metadata": {},
    "outputs": [
@@ -477,7 +497,7 @@
      "text": [
       "\n",
       " mean compact error DNN: \n",
-      " 0.025795382\n",
+      " 0.058368146\n",
       "\n",
       " mean compact error D2D: \n",
       " 0.014100906\n"
@@ -547,7 +567,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -561,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
