--- a/v3/ICET_spherical.ipynb
+++ b/v3/ICET_spherical.ipynb
@@ -13,16 +13,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Derm\\anaconda3\\envs\\tf23\\lib\\site-packages\\numpy\\_distributor_init.py:32: UserWarning: loaded more than 1 DLL from .libs:\n",
-      "C:\\Users\\Derm\\anaconda3\\envs\\tf23\\lib\\site-packages\\numpy\\.libs\\libopenblas.PYQHXLVVQ7VESDPUVUADXEVJOBGHJPAY.gfortran-win_amd64.dll\n",
-      "C:\\Users\\Derm\\anaconda3\\envs\\tf23\\lib\\site-packages\\numpy\\.libs\\libopenblas.XWYDX2IKJW2NMTWSFYNGFUWKQU3LYTCZ.gfortran-win_amd64.dll\n",
-      "  stacklevel=1)\n"
-     ]
-    },
-    {
      "data": {
       "application/javascript": [
        "IPython.notebook.set_autosave_interval(180000)"
@@ -76,27 +66,27 @@
       "\n",
       " estimated solution vector X: \n",
       " tf.Tensor(\n",
-      "[ 2.7816632e-01  1.7512392e-02  2.8355704e-03 -1.8363097e-04\n",
-      "  3.8563819e-03  1.2993175e-02], shape=(6,), dtype=float32)\n",
+      "[ 2.8273708e-01  1.3461664e-02  2.8971508e-03 -1.8529854e-04\n",
+      "  3.8605509e-03  1.2958324e-02], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
       " tf.Tensor(\n",
-      "[ 3.2434106e-01  9.9958442e-03  4.8298929e-03 -1.4268406e-04\n",
-      "  4.1102939e-03  1.4092609e-02], shape=(6,), dtype=float32)\n",
+      "[ 3.2459435e-01  9.1738561e-03  4.8946557e-03 -1.4936211e-04\n",
+      "  4.1402201e-03  1.4039576e-02], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
       " tf.Tensor(\n",
-      "[ 3.3267060e-01  9.7978711e-03  4.7984356e-03 -1.5852210e-04\n",
-      "  4.1678241e-03  1.4085230e-02], shape=(6,), dtype=float32)\n",
+      "[ 3.3197820e-01  9.4865644e-03  4.7735632e-03 -1.5404547e-04\n",
+      "  4.1768220e-03  1.4043342e-02], shape=(6,), dtype=float32)\n",
       "\n",
       " estimated solution vector X: \n",
       " tf.Tensor(\n",
-      "[ 3.3417261e-01  9.3101067e-03  4.7632442e-03 -1.6175915e-04\n",
-      "  4.2003901e-03  1.4068353e-02], shape=(6,), dtype=float32)\n",
+      "[ 3.3315015e-01  9.3418704e-03  4.7396068e-03 -1.5835796e-04\n",
+      "  4.1872347e-03  1.4036795e-02], shape=(6,), dtype=float32)\n",
       "pred_stds: \n",
       " tf.Tensor(\n",
-      "[8.5330848e-04 8.6959574e-04 7.0144393e-05 1.2132104e-05 1.4382250e-05\n",
-      " 9.0631016e-05], shape=(6,), dtype=float32)\n",
+      "[8.5128017e-04 8.6849497e-04 7.0060079e-05 1.2130686e-05 1.4319425e-05\n",
+      " 9.0558482e-05], shape=(6,), dtype=float32)\n",
       " L2: \n",
       " tf.Tensor(\n",
       "[[1. 0. 0. 0. 0. 0.]\n",
@@ -110,7 +100,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5215215f9a714eb3ab3854b81c735068",
+       "model_id": "6c40b1eb4ba545d4a44ac54095b2b93c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -4226,7 +4216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -4240,7 +4230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
