ran initial benchmarks on NDT and ICP-point2plane on scene1

--- a/v3/spherical_paper/MC_results.ipynb
+++ b/v3/spherical_paper/MC_results.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 114,
    "id": "passing-tumor",
    "metadata": {},
    "outputs": [
@@ -113,10 +113,7 @@
       "\n",
       "\n",
       " RMSE \n",
-      " [0.03357035 0.00045271 0.01139514 0.02166794 0.12032019 0.00235733]\n",
-      "\n",
-      " pred_RMSE \n",
-      " [0.00322228 0.00025362 0.00224893 0.01022591 0.01308233 0.00115956]\n"
+      " [0.03357035 0.00045271 0.01139514 0.02166794 0.12032019 0.00235733]\n"
      ]
     }
    ],
@@ -135,8 +132,11 @@
     "# fn1 = \"MC_results/traj2_cart_ICET_estimates.npy\" \n",
     "# fn2 = \"MC_results/traj2_cart_ICET_pred_stds.npy\"\n",
     "est = np.load(fn1)\n",
-    "\n",
     "pred_stds = np.load(fn2)\n",
+    "\n",
+    "# fn1 = \"MC_results/traj1_cart_ICP_point2plane_NO_GP.txt\" #ICP Point-to-Plane\n",
+    "# fn1 = \"MC_results/traj1_cart_NDT_NO_GP.txt\" #NDT (from MatLab canned operation)\n",
+    "# est = np.loadtxt(fn1)[:117]\n",
     "\n",
     "#just consider first 100----------------------\n",
     "# est = est[:100,:]\n",
@@ -173,7 +173,7 @@
     "# pred_MSE = np.mean(pred_stds, axis = 0)**2\n",
     "pred_RMSE = np.mean(pred_stds, axis = 0)\n",
     "pred_RMSE[3:] = np.rad2deg(pred_RMSE[3:]) #convert rad2deg\n",
-    "print(\"\\n pred_RMSE \\n\", pred_RMSE)\n"
+    "# print(\"\\n pred_RMSE \\n\", pred_RMSE)\n"
    ]
   },
   {
