installed MatLab 2022a and Lidar toolbox, starting benchmarking LOAM on scene1

--- a/v3/spherical_paper/MC_results.ipynb
+++ b/v3/spherical_paper/MC_results.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 120,
    "id": "passing-tumor",
    "metadata": {},
    "outputs": [
@@ -109,11 +109,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "removed  46 outliers from  117 total estimates \n",
+      "removed  0 outliers from  117 total estimates \n",
       "\n",
       "\n",
       " RMSE \n",
-      " [0.03357035 0.00045271 0.01139514 0.02166794 0.12032019 0.00235733]\n"
+      " [0.00098232 0.00015396 0.00014483 0.00131564 0.00139507 0.00074493]\n"
      ]
     }
    ],
@@ -123,10 +123,10 @@
     "\n",
     "# fn1 = \"MC_results/traj1_cart_ICET_estimates_with_GP.npy\" \n",
     "# fn2 = \"MC_results/traj1_cart_ICET_pred_stds_with_GP.npy\"\n",
-    "fn1 = \"MC_results/traj1_cart_ICET_estimates_no_GP.npy\" \n",
-    "fn2 = \"MC_results/traj1_cart_ICET_pred_stds_no_GP.npy\"\n",
-    "# fn1 = \"MC_results/traj1_spherical_ICET_estimates.npy\" \n",
-    "# fn2 = \"MC_results/traj1_spherical_ICET_pred_stds.npy\"\n",
+    "# fn1 = \"MC_results/traj1_cart_ICET_estimates_no_GP.npy\" \n",
+    "# fn2 = \"MC_results/traj1_cart_ICET_pred_stds_no_GP.npy\"\n",
+    "fn1 = \"MC_results/traj1_spherical_ICET_estimates.npy\" \n",
+    "fn2 = \"MC_results/traj1_spherical_ICET_pred_stds.npy\"\n",
     "# fn1 = \"MC_results/traj2_spherical_ICET_estimates.npy\" \n",
     "# fn2 = \"MC_results/traj2_spherical_ICET_pred_stds.npy\"\n",
     "# fn1 = \"MC_results/traj2_cart_ICET_estimates.npy\" \n",
@@ -136,6 +136,7 @@
     "\n",
     "# fn1 = \"MC_results/traj1_cart_ICP_point2plane_NO_GP.txt\" #ICP Point-to-Plane\n",
     "# fn1 = \"MC_results/traj1_cart_NDT_NO_GP.txt\" #NDT (from MatLab canned operation)\n",
+    "# fn1 = \"MC_results/traj1_cart_LOAM_NO_GP.txt\" #LOAM\n",
     "# est = np.loadtxt(fn1)[:117]\n",
     "\n",
     "#just consider first 100----------------------\n",
