more benchmarking, LOAM is really bad at the synthetic roadway scene

--- a/v3/spherical_paper/MC_results.ipynb
+++ b/v3/spherical_paper/MC_results.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 253,
    "id": "passing-tumor",
    "metadata": {},
    "outputs": [
@@ -109,11 +109,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "removed  0 outliers from  117 total estimates \n",
+      "removed  19 outliers from  117 total estimates \n",
       "\n",
       "\n",
       " RMSE \n",
-      " [0.00098232 0.00015396 0.00014483 0.00131564 0.00139507 0.00074493]\n"
+      " [0.01692898 0.0063739  0.03557215 0.0303604  0.24194511 0.22655136]\n"
      ]
     }
    ],
@@ -121,12 +121,12 @@
     "#40 frame trajectory (3 iterations each pair)\n",
     "# Ground truth = [0.5, 0., 0., 0.0, 0.0, 0.05]\n",
     "\n",
-    "# fn1 = \"MC_results/traj1_cart_ICET_estimates_with_GP.npy\" \n",
-    "# fn2 = \"MC_results/traj1_cart_ICET_pred_stds_with_GP.npy\"\n",
+    "fn1 = \"MC_results/traj1_cart_ICET_estimates_with_GP.npy\" \n",
+    "fn2 = \"MC_results/traj1_cart_ICET_pred_stds_with_GP.npy\"\n",
     "# fn1 = \"MC_results/traj1_cart_ICET_estimates_no_GP.npy\" \n",
     "# fn2 = \"MC_results/traj1_cart_ICET_pred_stds_no_GP.npy\"\n",
-    "fn1 = \"MC_results/traj1_spherical_ICET_estimates.npy\" \n",
-    "fn2 = \"MC_results/traj1_spherical_ICET_pred_stds.npy\"\n",
+    "# fn1 = \"MC_results/traj1_spherical_ICET_estimates.npy\" \n",
+    "# fn2 = \"MC_results/traj1_spherical_ICET_pred_stds.npy\"\n",
     "# fn1 = \"MC_results/traj2_spherical_ICET_estimates.npy\" \n",
     "# fn2 = \"MC_results/traj2_spherical_ICET_pred_stds.npy\"\n",
     "# fn1 = \"MC_results/traj2_cart_ICET_estimates.npy\" \n",
@@ -134,41 +134,67 @@
     "est = np.load(fn1)\n",
     "pred_stds = np.load(fn2)\n",
     "\n",
-    "# fn1 = \"MC_results/traj1_cart_ICP_point2plane_NO_GP.txt\" #ICP Point-to-Plane\n",
+    "# fn1 = \"MC_results/traj1_cart_ICP_point2plane_NO_GP.txt\" #ICP Point-to-Plane, zero initial conds\n",
+    "# fn1 = \"MC_results/traj1_cart_ICP_point2plane_NO_GP_perfect_init.txt\" #perfect initial guess\n",
+    "# fn1 = \"MC_results/traj1_cart_ICP_point2point_NO_GP.txt\" #ICP Point-to-Point\n",
     "# fn1 = \"MC_results/traj1_cart_NDT_NO_GP.txt\" #NDT (from MatLab canned operation)\n",
-    "# fn1 = \"MC_results/traj1_cart_LOAM_NO_GP.txt\" #LOAM\n",
-    "# est = np.loadtxt(fn1)[:117]\n",
+    "# fn1 = \"MC_results/traj1_cart_NDT_NO_GP_OR_0.txt\" #NDT with no outlier removal\n",
+    "fn1 = \"MC_results/traj1_cart_LOAM_NO_GP.txt\" #LOAM\n",
+    "est = np.loadtxt(fn1)[:117]\n",
     "\n",
     "#just consider first 100----------------------\n",
     "# est = est[:100,:]\n",
     "# pred_stds = pred_stds[:100,:]\n",
     "#---------------------------------------------\n",
     "\n",
-    "#remove outliers ~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "before = np.shape(est)[0]\n",
-    "#get rid of high translation errors\n",
-    "good = np.where(est[:,0] > 0.35) #0.35\n",
+    "\n",
+    "#get rid of high translation errors~~~~~~~\n",
+    "good = np.where(est[:,0] > 0.45) #0.35\n",
     "est = est[good]\n",
     "pred_stds = pred_stds[good]\n",
-    "good = np.where(est[:,0] < 0.65) #0.35\n",
+    "good = np.where(est[:,0] < 0.55) #0.65\n",
     "est = est[good]\n",
     "pred_stds = pred_stds[good]\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "\n",
+    "#get rid of high yaw errors~~~~~~~~~~\n",
+    "good = np.where(est[:,3] > (-0.051))\n",
+    "est = est[good]\n",
+    "pred_stds = pred_stds[good]\n",
+    "good = np.where(est[:,3] < (-0.049))\n",
+    "est = est[good]\n",
+    "pred_stds = pred_stds[good]\n",
+    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# print(est[:,3])\n",
+    "\n",
+    "\n",
+    "# #get rid of high lane shift errors~~~\n",
+    "good = np.where(est[:,1] < 0.05)\n",
+    "est = est[good]\n",
+    "pred_stds = pred_stds[good]\n",
+    "good = np.where(est[:,1] > -0.05)\n",
+    "est = est[good]\n",
+    "pred_stds = pred_stds[good]\n",
+    "# #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "\n",
     "#get rid of high rotation errors\n",
-    "good = np.where(abs(est[:,5] < 0.08  ))\n",
-    "est = est[good]\n",
-    "pred_stds = pred_stds[good]\n",
+    "# good = np.where(abs(est[:,5] < 0.08  ))\n",
+    "# est = est[good]\n",
+    "# pred_stds = pred_stds[good]\n",
     "print(\"removed \", before - np.shape(est)[0], \"outliers from \", before, \"total estimates \\n\")\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-    "# print(est[:,0])\n",
+    "# print(est[:,5])\n",
     "# print(\"Predicted STDs: \\n\",\n",
     "#     np.mean(pred_stds, axis = 0)[:3], np.rad2deg(np.mean(pred_stds, axis = 0)[3:]))\n",
     "# print(np.mean(pred_stds, axis = 0)[:3],np.mean(pred_stds, axis = 0)[3:])\n",
     "\n",
     "\n",
-    "# MSE = np.mean((est - np.array([0.5, 0, 0, 0, 0, -0.05]))**2, axis = 0)\n",
-    "err = (est - np.array([0.5, 0, 0, 0, 0, -0.05])) #angular errors in rad\n",
+    "# err = (est - np.array([0.5, 0, 0, 0, 0, -0.05])) #angular errors in rad #FOR ICET DATA\n",
+    "err = (est - np.array([0.5, 0, 0,-0.05, 0, 0])) #angular errors in rad #FOR MATLAB DATA\n",
     "err[:,3:] = np.rad2deg(err[:,3:]) #convert angular errors to deg\n",
-    "RMSE = np.mean(np.sqrt(err**2), axis = 0)\n",
+    "RMSE = np.sqrt(np.mean(err**2, axis = 0))\n",
+    "# print(err[:,5])\n",
     "print(\"\\n RMSE \\n\", RMSE)\n",
     "\n",
     "# pred_MSE = np.mean(pred_stds, axis = 0)**2\n",
@@ -179,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 226,
    "id": "natural-collective",
    "metadata": {},
    "outputs": [
@@ -187,7 +213,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.05589685 0.00174533 0.00452276] [0.02622921 0.07860507 0.00923957]\n"
+      "[0.02101346 0.00319743 0.02710573] [0.02023929 0.17213988 0.1750012 ]\n"
      ]
     }
    ],
