benchmarked NDT with spherical voxels, generating data for spherical ICP

--- a/v3/spherical_paper/MC_results.ipynb
+++ b/v3/spherical_paper/MC_results.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 264,
    "id": "passing-tumor",
    "metadata": {},
    "outputs": [
@@ -109,11 +109,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "removed  19 outliers from  117 total estimates \n",
+      "[0.49973564 0.50028347 0.49994618 0.5004676  0.49959291 0.50025896\n",
+      " 0.50007058 0.50006116 0.50064744 0.49907017 0.4994546  0.49965484\n",
+      " 0.50089951 0.50004679 0.50055655 0.49952796 0.50013932 0.50041035\n",
+      " 0.49976491 0.500321   0.50037744 0.50011462 0.50037216 0.50064597\n",
+      " 0.50041328 0.50029354 0.49932186 0.50002194 0.50054005 0.49982778\n",
+      " 0.49976971 0.49970701 0.50062722 0.50017666 0.49972652 0.49974418\n",
+      " 0.50038615 0.4992582 ]\n",
+      "removed  0 outliers from  38 total estimates \n",
       "\n",
       "\n",
       " RMSE \n",
-      " [0.01692898 0.0063739  0.03557215 0.0303604  0.24194511 0.22655136]\n"
+      " [0.00043398 0.00021026 0.00056596 0.00147668 0.009448   0.0046546 ]\n"
      ]
     }
    ],
@@ -139,8 +146,13 @@
     "# fn1 = \"MC_results/traj1_cart_ICP_point2point_NO_GP.txt\" #ICP Point-to-Point\n",
     "# fn1 = \"MC_results/traj1_cart_NDT_NO_GP.txt\" #NDT (from MatLab canned operation)\n",
     "# fn1 = \"MC_results/traj1_cart_NDT_NO_GP_OR_0.txt\" #NDT with no outlier removal\n",
-    "fn1 = \"MC_results/traj1_cart_LOAM_NO_GP.txt\" #LOAM\n",
-    "est = np.loadtxt(fn1)[:117]\n",
+    "# fn1 = \"MC_results/traj1_cart_LOAM_NO_GP.txt\" #LOAM\n",
+    "# est = np.loadtxt(fn1)[:117]\n",
+    "# est = np.load(\"MC_results/traj1_spherical_NDT_estimates.npy\") #NDT with spherical grid \n",
+    "# est = est[:100]\n",
+    "# pred_stds = pred_stds[:100]\n",
+    "est = np.loadtxt(\"MC_results/traj1_spherical_ICP_point2plane_NO_GP.txt\")\n",
+    "\n",
     "\n",
     "#just consider first 100----------------------\n",
     "# est = est[:100,:]\n",
@@ -158,15 +170,15 @@
     "pred_stds = pred_stds[good]\n",
     "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
     "\n",
-    "#get rid of high yaw errors~~~~~~~~~~\n",
-    "good = np.where(est[:,3] > (-0.051))\n",
-    "est = est[good]\n",
-    "pred_stds = pred_stds[good]\n",
-    "good = np.where(est[:,3] < (-0.049))\n",
-    "est = est[good]\n",
-    "pred_stds = pred_stds[good]\n",
-    "#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-    "# print(est[:,3])\n",
+    "# #get rid of high yaw errors~~~~~~~~~~\n",
+    "# good = np.where(est[:,3] > (-0.051))\n",
+    "# est = est[good]\n",
+    "# pred_stds = pred_stds[good]\n",
+    "# good = np.where(est[:,3] < (-0.049))\n",
+    "# est = est[good]\n",
+    "# pred_stds = pred_stds[good]\n",
+    "# #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "print(est[:,0])\n",
     "\n",
     "\n",
     "# #get rid of high lane shift errors~~~\n",
