finished revisions for spherical paper, going back to DNN filter project

--- a/v3/perspective_shift/D2DvsDNN.ipynb
+++ b/v3/perspective_shift/D2DvsDNN.ipynb
@@ -71,22 +71,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "utility-burst",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 441450 into shape (100,3)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 54>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     51\u001b[0m points_per_sample \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m100\u001b[39m \u001b[38;5;66;03m#50          #poitns sammpled from each voxel\u001b[39;00m\n\u001b[0;32m     52\u001b[0m tsplit \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.5\u001b[39m \u001b[38;5;66;03m#0.95                   #this fraction goes into training\u001b[39;00m\n\u001b[1;32m---> 54\u001b[0m scan1 \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[43md1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m-\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpoints_per_sample\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     55\u001b[0m scan2 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mreshape(d2, [\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m, points_per_sample, \u001b[38;5;241m3\u001b[39m])\n\u001b[0;32m     56\u001b[0m ntrain \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(tsplit\u001b[38;5;241m*\u001b[39mtf\u001b[38;5;241m.\u001b[39mshape(scan1)[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mnumpy())\n",
-      "File \u001b[1;32m<__array_function__ internals>:180\u001b[0m, in \u001b[0;36mreshape\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\py39\\lib\\site-packages\\numpy\\core\\fromnumeric.py:298\u001b[0m, in \u001b[0;36mreshape\u001b[1;34m(a, newshape, order)\u001b[0m\n\u001b[0;32m    198\u001b[0m \u001b[38;5;129m@array_function_dispatch\u001b[39m(_reshape_dispatcher)\n\u001b[0;32m    199\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mreshape\u001b[39m(a, newshape, order\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m    200\u001b[0m     \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    201\u001b[0m \u001b[38;5;124;03m    Gives a new shape to an array without changing its data.\u001b[39;00m\n\u001b[0;32m    202\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    296\u001b[0m \u001b[38;5;124;03m           [5, 6]])\u001b[39;00m\n\u001b[0;32m    297\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 298\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_wrapfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mreshape\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnewshape\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morder\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43morder\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\anaconda3\\envs\\py39\\lib\\site-packages\\numpy\\core\\fromnumeric.py:57\u001b[0m, in \u001b[0;36m_wrapfunc\u001b[1;34m(obj, method, *args, **kwds)\u001b[0m\n\u001b[0;32m     54\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 57\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m bound(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n\u001b[0;32m     58\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m     59\u001b[0m     \u001b[38;5;66;03m# A TypeError occurs if the object does have such a method in its\u001b[39;00m\n\u001b[0;32m     60\u001b[0m     \u001b[38;5;66;03m# class, but its signature is not identical to that of NumPy's. This\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     64\u001b[0m     \u001b[38;5;66;03m# Call _wrapit from within the except clause to ensure a potential\u001b[39;00m\n\u001b[0;32m     65\u001b[0m     \u001b[38;5;66;03m# exception has a traceback chain.\u001b[39;00m\n\u001b[0;32m     66\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _wrapit(obj, method, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwds)\n",
-      "\u001b[1;31mValueError\u001b[0m: cannot reshape array of size 441450 into shape (100,3)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1471, 100, 3)\n",
+      "(1472, 100, 3)\n"
      ]
     }
    ],
@@ -174,13 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "significant-device",
    "metadata": {},
    "outputs": [],
    "source": [
     "# model = tf.keras.models.load_model(\"FORDNetV3.kmod\")\n",
-    "model = tf.keras.models.load_model(\"FORDNetCP.kmod\")"
+    "model = tf.keras.models.load_model(\"Net.kmod\")\n",
+    "# model = tf.keras.models.load_model(\"FORDNetCP.kmod\")"
    ]
   },
   {
@@ -201,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "protective-flush",
    "metadata": {},
    "outputs": [],
@@ -237,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 41,
    "id": "quiet-philip",
    "metadata": {},
    "outputs": [
@@ -245,25 +240,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "47\n",
+      "420\n",
+      "1/1 [==============================] - 0s 15ms/step\n",
       "1/1 [==============================] - 0s 14ms/step\n",
       "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
       "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 17ms/step\n",
-      "1/1 [==============================] - 0s 16ms/step\n",
+      "1/1 [==============================] - 0s 15ms/step\n",
       "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
+      "1/1 [==============================] - 0s 13ms/step\n",
+      "1/1 [==============================] - 0s 12ms/step\n",
       "\n",
-      " correct soln [ 0.52963376 -1.5925289  -0.11975689]\n",
+      " correct soln [-0.7829821  -0.8573041  -0.06181115]\n",
       "\n",
-      " estiamted soln: [[ 0.51067625 -1.73462761 -0.16316545]]\n",
+      " estiamted soln: [[-0.73927922 -0.90048453 -0.11845285]]\n",
       "\n",
-      " error from DNN: [[0.01895751 0.14209867 0.04340855]]\n",
+      " error from DNN: [[-0.04370289  0.04318043  0.0566417 ]]\n",
       "\n",
-      " error in means [0.00147319 0.00860536 0.02639726]\n"
+      " error in means [-0.01054788  0.05763483  0.03111309]\n"
      ]
     }
    ],
@@ -296,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "active-liverpool",
    "metadata": {},
    "outputs": [
@@ -304,24 +299,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([ 0.53243005  0.00128222 -0.05259839], shape=(3,), dtype=float32)\n",
-      "[ 4.709242   -3.4214644   0.20789552]\n",
-      "[ 4.9969807  -2.9855585   0.20789552]\n"
+      "tf.Tensor([-0.7544794   0.01877005  0.04665719], shape=(3,), dtype=float32)\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f25d3237d06a432bba2e67448dbbe98d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
@@ -400,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "proud-puzzle",
    "metadata": {},
    "outputs": [
@@ -409,16 +388,7 @@
      "output_type": "stream",
      "text": [
       "x_test tf.Tensor([1472  100    3], shape=(3,), dtype=int32)\n",
-      "46/46 [==============================] - 0s 2ms/step\n",
-      "46/46 [==============================] - 0s 2ms/step\n",
-      "46/46 [==============================] - 0s 2ms/step\n",
-      "46/46 [==============================] - 0s 2ms/step\n",
-      "46/46 [==============================] - 0s 2ms/step\n",
-      "46/46 [==============================] - 0s 2ms/step\n",
-      "46/46 [==============================] - 0s 2ms/step\n",
-      "46/46 [==============================] - 0s 2ms/step\n",
-      "46/46 [==============================] - 0s 2ms/step\n",
-      "46/46 [==============================] - 0s 2ms/step\n",
+      "46/46 [==============================] - 1s 21ms/step\n",
       "\n",
       " correct soln \n",
       " [[-1.5052794  -0.061748   -0.02118067]\n",
@@ -430,28 +400,28 @@
       " [-0.7231753   0.3887675  -0.00653277]]\n",
       "\n",
       " estiamted soln: \n",
-      " [[-1.58495105 -0.07757852 -0.01402593]\n",
-      " [-0.80877191 -0.59026881  0.02493609]\n",
-      " [ 0.13410813  0.41948672 -0.06199452]\n",
+      " [[-1.77532375 -0.01228124  0.09839122]\n",
+      " [-0.69614494 -0.58025914  0.00329802]\n",
+      " [ 0.14363322  0.43549585  0.01154036]\n",
       " ...\n",
-      " [ 0.08477809  1.34650388 -0.0826522 ]\n",
-      " [-1.8182852  -1.85418773 -0.02040547]\n",
-      " [-0.72365818  0.34285385 -0.32680475]]\n",
+      " [-0.00263295  1.44141853  0.02813716]\n",
+      " [-1.83761263 -1.82595229 -0.02787037]\n",
+      " [-0.76068491  0.53415525  0.08283281]]\n",
       "\n",
       " error from DNN: \n",
-      " [[ 0.07967163  0.01583052 -0.00715474]\n",
-      " [ 0.08197797  0.04063638  0.03408195]\n",
-      " [ 0.16170546  0.02737688  0.01470155]\n",
+      " [[ 0.27004433 -0.04946677 -0.11957189]\n",
+      " [-0.03064901  0.03062671  0.05572001]\n",
+      " [ 0.15218037  0.01136774 -0.05883333]\n",
       " ...\n",
-      " [-0.07159516  0.03452585  0.03521677]\n",
-      " [ 0.00605747 -0.01518559 -0.02257183]\n",
-      " [ 0.00048289  0.04591366  0.32027198]]\n",
+      " [ 0.01581588 -0.0603888  -0.07557259]\n",
+      " [ 0.0253849  -0.04342103 -0.01510694]\n",
+      " [ 0.03750962 -0.14538774 -0.08936557]]\n",
       "\n",
       " mean raw DNN error: \n",
-      " 0.12247131528202262\n",
+      " [0.08203186 0.0869071  0.08016124]\n",
       "\n",
       " mean raw D2D error \n",
-      " 0.051821\n"
+      " [0.027099   0.03634313 0.02510454]\n"
      ]
     }
    ],
@@ -465,7 +435,7 @@
     "inputs = x_test\n",
     "# print(\"c1\" , tf.shape(c1))\n",
     "print(\"x_test\" , tf.shape(x_test))\n",
-    "runlen = 10\n",
+    "runlen = 1\n",
     "corr_sum = np.zeros([tf.shape(x_test)[0].numpy(),1,3]) #init var to store correction contributions\n",
     "for i in range(runlen):\n",
     "    correction = model.predict(inputs)[:,None,:] #show what the network thinks\n",
@@ -483,17 +453,19 @@
     "print(\"\\n estiamted soln: \\n\", dnn_estimates)\n",
     "print(\"\\n error from DNN: \\n\", y_test - dnn_estimates)\n",
     "\n",
-    "print(\"\\n mean raw DNN error: \\n\", np.sqrt(np.sum(np.mean(np.abs(y_test - dnn_estimates), axis = 0)**2)))\n",
+    "# print(\"\\n mean raw DNN error: \\n\", np.sqrt(np.sum(np.mean(np.abs(y_test - dnn_estimates), axis = 0)**2)))\n",
+    "print(\"\\n mean raw DNN error: \\n\", np.sqrt(np.mean(np.abs(y_test - dnn_estimates), axis = 0)**2))\n",
     "\n",
     "D2D_distance = np.mean(x_test[:,:points_per_sample], axis = 1) - np.mean(x_test[:,points_per_sample:], axis = 1)\n",
     "# print(tf.shape(D2D_distance))\n",
     "# print(tf.shape(y_test))\n",
-    "print(\"\\n mean raw D2D error \\n\", np.sqrt(np.sum(np.mean(np.abs(y_test + D2D_distance), axis = 0)**2 )))"
+    "# print(\"\\n mean raw D2D error \\n\", np.sqrt(np.sum(np.mean(np.abs(y_test + D2D_distance), axis = 0)**2 )))\n",
+    "print(\"\\n mean raw D2D error \\n\", np.sqrt(np.mean(np.abs(y_test + D2D_distance), axis = 0)**2 ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "understanding-gibson",
    "metadata": {},
    "outputs": [
@@ -503,7 +475,7 @@
      "text": [
       "\n",
       " mean compact error DNN: \n",
-      " 0.058368146\n",
+      " 0.07649226\n",
       "\n",
       " mean compact error D2D: \n",
       " 0.014100906\n"
@@ -535,29 +507,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "entire-brick",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: shape=(8, 3), dtype=float32, numpy=\n",
-       "array([[ 6.597618  , -3.177247  ,  0.78728276],\n",
-       "       [ 6.8558645 , -2.57305   ,  0.78728276],\n",
-       "       [ 7.220676  , -3.4772959 ,  0.8616312 ],\n",
-       "       [ 7.50331   , -2.8160405 ,  0.8616312 ],\n",
-       "       [ 6.6314106 , -3.1935205 ,  0.2628742 ],\n",
-       "       [ 6.89098   , -2.5862288 ,  0.2628742 ],\n",
-       "       [ 7.2576594 , -3.4951062 ,  0.2876992 ],\n",
-       "       [ 7.5417414 , -2.8304641 ,  0.2876992 ]], dtype=float32)>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s2c(corn_test[n])"
    ]
